base/src/test/resources/failure/patterns/issues/issue354-confl.aya.txt
In file $FILE:13:4 ->

  11 |    { i := pos 0 | ~ i := neg 0 }
  12 | 
  13 | def abs (n : Int) : Nat
  14 |  | pos n => suc n
          ^------------^ substituted to `suc 0`
  15 |  | neg n => n
  16 |  | posneg _ => 0
          ^-----------^ substituted to `0`

Error: The 3rd clause matches on a constructor with condition(s). When checking 
       the 1st condition, we failed to unify `0` and `suc 0`

1 error(s), 0 warning(s).
What are you doing?
